--- a/HG002/HG002_PAG07162.md
+++ b/HG002/HG002_PAG07162.md
@@ -1,16 +1,19 @@
 # HG002_PAG07162 Long reads
 - [HG002_PAG07162 Long reads](#hg002_pag07162-long-reads)
-  - [Basecalling](#basecalling)
-  - [mapping](#mapping)
-    - [minimap2](#minimap2)
-    - [QC](#qc)
-  - [Small variants call](#small-variants-call)
-    - [PMDV](#pmdv)
-  - [Small variants call evaluation](#small-variants-call-evaluation)
-  - [SV-call](#sv-call)
-    - [mmi-Sniffles](#mmi-sniffles)
-  - [SV call evaluation](#sv-call-evaluation)
-    - [truvari](#truvari)
+	- [Basecalling](#basecalling)
+	- [mapping](#mapping)
+		- [minimap2](#minimap2)
+		- [QC](#qc)
+	- [Small variants call](#small-variants-call)
+		- [PMDV](#pmdv)
+	- [Small variants call evaluation](#small-variants-call-evaluation)
+		- [PMDV](#pmdv-1)
+		- [clair3](#clair3)
+	- [SV-call](#sv-call)
+		- [mmi-Sniffles](#mmi-sniffles)
+		- [mmi-cuteSV](#mmi-cutesv)
+	- [SV call evaluation](#sv-call-evaluation)
+		- [truvari](#truvari)
 
 
 ## Basecalling 
@@ -75,6 +78,7 @@ docker run --ipc=host \
   ```
 
 ## Small variants call evaluation
+### PMDV 
 Benchmarked against Hg38 HG002 GiAB small variants truth set.
 
 | **Type**  | **TRUTH.TOTAL** | **TRUTH.TP** | **TRUTH.FN** | **QUERY.TOTAL** | **QUERY.FP** | **QUERY.UNK** | **FP.gt** | **FP.al** | **METRIC.Recall** | **METRIC.Precision** | **METRIC.Frac_NA** | **METRIC.F1_Score** | **TRUTH.TOTAL.TiTv_ratio** | **QUERY.TOTAL.TiTv_ratio** | **TRUTH.TOTAL.het_hom_ratio** | **QUERY.TOTAL.het_hom_ratio ** |
@@ -84,19 +88,40 @@ Benchmarked against Hg38 HG002 GiAB small variants truth set.
 
 
 
+### clair3
+
+Benchmarked against Hg38 HG002 GiAB small variants truth set.
+
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 525469      | 401496   | 123973   | 704652      | 57530    | 235685    | 13663 | 28137 | 0.764072      | 0.877326         | 0.33447        | 0.816792        |                        |                        | 1.52827573414             | 1.6567349806              |
+| SNP   | 3365127     | 3359196  | 5931     | 4356352     | 14934    | 981060    | 1071  | 3145  | 0.998238      | 0.995575         | 0.225202       | 0.996905        | 2.10012848676          | 1.82494009926          | 1.58119585325             | 1.62931269243             |
+
 ## SV-call
 ### mmi-Sniffles
 ```
-time sniffles -i $BAM \
+sniffles -i $BAM \
 	--vcf $BASE/vc/sniffles/${SAMPLE}_sniffles.vcf \
 	--tandem-repeats $TRF38 \
 	--reference $REF \
 	-t 16
 ```
-
+### mmi-cuteSV
+```
+cuteSV $BAM $REF $CUTESVOUT . \
+    --max_cluster_bias_INS 100 \
+    --diff_ratio_merging_INS 0.3 \
+    --max_cluster_bias_DEL 100 \
+    --diff_ratio_merging_DEL 0.3 \
+    --threads 16 \
+    --genotype
+```
 
 ## SV call evaluation
 ### truvari 
-|TP-base|TP-call|FP |FN |precision         |recall            |f1                |base cnt|call cnt|TP-call_TP-gt|TP-call_FP-gt|TP-base_TP-gt|TP-base_FP-gt|gt_concordance    |gt_matrix/(1, 1)/(1, 1)|gt_matrix/(1, 1)/(0, 1)|gt_matrix/(1, 0)/(0, 1)|gt_matrix/(1, 0)/(1, 1)|gt_matrix/(0, 1)/(1, 1)|gt_matrix/(0, 1)/(0, 1)|
-|-------|-------|---|---|------------------|------------------|------------------|--------|--------|-------------|-------------|-------------|-------------|------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|
-|198    |198    |12 |18 |0.9428571428571428|0.9166666666666666|0.9295774647887323|216     |210     |141          |57           |141          |57           |0.7121212121212122|81                     |1                      |38                     |9                      |9                      |60                     |
+|**Ref** |**Aligner**|**Truth set**      |**Caller** |**TP-base**|**TP-call**|**FP** |**FN** |**precision**  |**recall**     |**f1**         |**base cnt**|**call cnt**|**TP-call_TP-gt**|**TP-call_FP-gt**|**TP-base_TP-gt**|**TP-base_FP-gt**|**gt_concordance**|**gt_matrix/(1, 1)/(1, 1)**|**gt_matrix/(1, 1)/(0, 1)**|**gt_matrix/(1, 0)/(0, 1)**|**gt_matrix/(1, 0)/(1, 1)**|**gt_matrix/(0, 1)/(1, 1)**|**gt_matrix/(0, 1)/(0, 1)**|
+|----|-------|---------------|-------|-------|-------|---|---|-----------|-----------|-----------|--------|--------|-------------|-------------|-------------|-------------|--------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|
+|Hg38|mmi    |CMRG           |cuteSV |194    |194    |16 |22 |0.923809524|0.898148148|0.910798122|216     |210     |137          |57           |137          |57           |0.706185567   |78                     |2                      |37                     |8                      |59                     |10                     |
+|Hg38|mmi    |SV tier1 lifted|cuteSV |9180   |9180   |761|390|0.923448345|0.959247649|0.941007637|9570    |9941    |9096         |84           |9096         |84           |0.990849673   |4180                   |47                     |4916                   |37                     |                       |                       |
+|Hg38|mmi    |CMRG           |snf    |198    |198    |12 |18 |0.942857143|0.916666667|0.929577465|216     |210     |141          |57           |141          |57           |0.712121212   |81                     |1                      |38                     |9                      |9                      |60                     |
+|Hg38|mmi    |SV tier1 lifted|snf    |9290   |9290   |685|280|0.931328321|0.970741902|0.950626759|9570    |9975    |9081         |209          |9081         |209          |0.977502691   |4237                   |48                     |4844                   |159                    |2                      |                       |
