--- a/HG002/HG002_PAG07506.md
+++ b/HG002/HG002_PAG07506.md
@@ -278,6 +278,7 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 ```
 
 ### hg38 - mmi 
+#### HG002_GRCh38_1_22_v4.2.1
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 525469      | 338277   | 187192   | 665660      | 124739   | 194352    | 27320 | 39298 | 0.643762      | 0.735334         | 0.291969       | 0.686508        |                        |                        | 1.52827573414             | 1.6732100107              |
@@ -285,6 +286,7 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 
 
 ### hg38 - lra 
+#### HG002_GRCh38_1_22_v4.2.1
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 525469      | 298267   | 227202   | 599357      | 121148   | 165091    | 25312 | 41766 | 0.567621      | 0.721028         | 0.275447       | 0.635193        |                        |                        | 1.52827573414             | 1.39912402642             |
@@ -292,6 +294,7 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 
 
 ### hg19 - mmi 
+#### HG002_GRCh37_1_22_v4.2.1
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 522391      | 337133   | 185258   | 662865      | 124237   | 193316    | 27117 | 39085 | 0.645365      | 0.735412         | 0.291637       | 0.687452        |                        |                        | 1.51400395697             | 1.68226761178             |
@@ -299,18 +302,26 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 
 
 ### hg19 - lra 
+#### HG002_GRCh37_1_22_v4.2.1
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 522390      | 304915   | 217475   | 607368      | 119248   | 166309    | 25031 | 40848 | 0.583692      | 0.729633         | 0.273819       | 0.648554        |                        |                        | 1.51401175761             | 1.47666510608             |
 | SNP   | 3352686     | 3311161  | 41525    | 3820537     | 27362    | 491993    | 3320  | 4945  | 0.987614      | 0.99178          | 0.128776       | 0.989693        | 2.09757296126          | 2.06407150004          | 1.57433458455             | 1.61257583179             |
 
 ### t2t - mmi 
+#### HG002_GRCh38_1_22_v4.2.1
+Variant calls lifted from t2t to 38
+
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 525469      | 151025   | 374444   | 423001      | 166037   | 104418    | 10531 | 67162 | 0.28741       | 0.478827         | 0.24685        | 0.359209        |                        |                        | 1.52827573414             | 2.05466563273             |
 | SNP   | 3365127     | 2416789  | 948338   | 2717610     | 14051    | 286445    | 899   | 5617  | 0.718187      | 0.99422          | 0.105403       | 0.833956        | 2.10012848676          | 2.06551665409          | 1.58119585325             | 5.23086518838             |
 
 ### t2t - lra
+#### HG002_GRCh38_1_22_v4.2.1
+Variant calls lifted from t2t to 38
+
+
 | Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
 |-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
 | INDEL | 525469      | 135249   | 390220   | 393504      | 163101   | 89453     | 9204  | 67759 | 0.257387      | 0.463574         | 0.227324       | 0.330997        |                        |                        | 1.52827573414             | 1.82372856833             |
@@ -323,17 +334,16 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 truvari bench -b $TRUTHSET -c $VCF  -f $REF -o $OUTPUTDIR --passonly --includebed TRUTHBED
 ```
 
-| **Reference** | **Aligner** | **Truth set**   | **Caller** | **TP-base** | **TP-call** | **FP** | **FN** | **precision** | **recall**  |
-|---------------|-------------|-----------------|------------|-------------|-------------|--------|--------|---------------|-------------|
-| **Hg19**      | mmi         | SV tier1        | snf        | 9281        | 9281        | 822    | 360    | 0.918638028   | 0.962659475 |
-| **Hg19**      | lra         | SV tier1        | cutesv     | 8391        | 8391        | 412    | 1250   | 0.953197773   | 0.8703454   |
-| **Hg38**      | lra         | CMRG            | cutesv     | 171         | 171         | 3      | 45     | 0.982758621   | 0.791666667 |
-| **Hg38**      | lra         | SV tier1 lifted | cutesv     | 8045        | 8045        | 481    | 1525   | 0.94358433    | 0.840647858 |
-| **Hg38**      | mmi         | SV tier1 lifted | snf        | 9288        | 9288        | 634    | 282    | 0.936101592   | 0.970532915 |
-| **Hg38**      | mmi         | CMRG            | snf        | 198         | 198         | 8      | 18     | 0.961165049   | 0.916666667 |
-| **t2t**       | lra         | SV tier1 lifted | cutesv     | 2665        | 2665        | 4444   | 3749   | 0.374876917   | 0.41549735  |
-| **t2t**       | mmi         | SV tier1 lifted | snf        | 3195        | 3195        | 5361   | 3219   | 0.37342216    | 0.498129093 |
-| 
+|Ref |Aligner|Truth set      |Caller|TP-base|TP-call|FP  |FN  |precision  |recall     |f1         |base cnt|call cnt|TP-call_TP-gt|TP-call_FP-gt|TP-base_TP-gt|TP-base_FP-gt|gt_concordance|gt_matrix/(1, 1)/(1, 1)|gt_matrix/(1, 1)/(0, 1)|gt_matrix/(1, 0)/(0, 1)|gt_matrix/(1, 0)/(1, 1)|gt_matrix/(0, 1)/(1, 1)|gt_matrix/(0, 1)/(0, 1)|
+|----|-------|---------------|------|-------|-------|----|----|-----------|-----------|-----------|--------|--------|-------------|-------------|-------------|-------------|--------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|
+|Hg38|lra    |CMRG           |cutesv|171    |171    |3   |45  |0.982758621|0.791666667|0.876923077|216     |174     |124          |47           |124          |47           |0.725146199   |78                     |3                      |27                     |10                     |46                     |7                      |
+|Hg38|mmi    |CMRG           |snf   |198    |198    |8   |18  |0.961165049|0.916666667|0.938388626|216     |206     |142          |56           |142          |56           |0.717171717   |81                     |1                      |36                     |9                      |10                     |61                     |
+|Hg19|lra    |SV tier1       |cutesv|8391   |8391   |412 |1250|0.953197773|0.8703454  |0.909889395|9641    |8803    |8185         |206          |8185         |206          |0.975449887   |4141                   |117                    |4044                   |89                     |                       |                       |
+|Hg19|mmi    |SV tier1       |snf   |9281   |9281   |822 |360 |0.918638028|0.962659475|0.940133712|9641    |10103   |9062         |219          |9062         |219          |0.976403405   |4233                   |64                     |4829                   |153                    |2                      |                       |
+|Hg38|lra    |SV tier1 lifted|cutesv|8045   |8045   |481 |1525|0.94358433 |0.840647858|0.889146773|9570    |8526    |7823         |222          |7823         |222          |0.972405221   |3957                   |145                    |3866                   |77                     |                       |                       |
+|Hg38|mmi    |SV tier1 lifted|snf   |9288   |9288   |634 |282 |0.936101592|0.970532915|0.953006362|9570    |9922    |9083         |205          |9083         |205          |0.97792851    |4246                   |48                     |4837                   |155                    |2                      |                       |
+|t2t |lra    |SV tier1 lifted|cutesv|2665   |2665   |4444|3749|0.374876917|0.41549735 |0.394143311|6414    |7109    |0            |2665         |0            |2665         |0             |1978                   |687                    |                       |                       |                       |                       |
+|t2t |mmi    |SV tier1 lifted|snf   |3195   |3195   |5361|3219|0.37342216 |0.498129093|0.426853707|6414    |8556    |3103         |92           |3103         |92           |0.971205008   |2403                   |81                     |2                      |700                    |9                      |                       |
 
 
 ![](./files/HG0027506_svcall_metrics_lra.png)
