--- a/HG002/HG002_PAG07162.md
+++ b/HG002/HG002_PAG07162.md
@@ -4,7 +4,7 @@
 	- [mapping](#mapping)
 		- [minimap2](#minimap2)
 		- [QC](#qc)
-	- [Small variants call](#small-variants-call)
+	- [Small varqiants call](#small-varqiants-call)
 		- [PMDV](#pmdv)
 	- [Small variants call evaluation](#small-variants-call-evaluation)
 		- [PMDV](#pmdv-1)
@@ -55,10 +55,10 @@ see [QC](https://raw.githack.com/ziphra/long_reads/main/HG002/files/HG002_PAG071
 
 | Alignment summary  | Reads    | Mean coverage | N50   | Median read length | Median identity freq |
 |--------------------|----------|---------------|-------|--------------------|----------------------|
-| **mmi**            | 9.07E+06 | 63.7          | 19300 | 19300              | 0.970                |
+| **mmi**            | 9.08E+06 | 63.7          | 19300 | 19300              | 0.970                |
 
 
-## Small variants call
+## Small varqiants call
 ### PMDV
 ```
 docker run --ipc=host \
